get professional and patient by id
